--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,11 +23,14 @@ jobs:
     - name: Lint with black
       run: |
         black --check lorentz-boost/**
-    - name: Test with pytest
+    - name: Unit Test
       run: |
-        pytest --pyargs lorentz-boost --cov=./ --cov-report=xml
+        pytest lorentz-boost/test/test_ut.py --cov=./ --cov-report=xml:ut.xml
+    - name: Integration Test
+      run: |
+        pytest lorentz-boost/test/test_boosts.py --cov=./ --cov-report=xml:it.xml
     - name: Upload coverage
       uses: codecov/codecov-action@v1
       with:
         fail_ci_if_error: true
-        verbose: true
+        files: ./ut.xml,./it.xml
